--- a/src/components/TabPage/index.css
+++ b/src/components/TabPage/index.css
@@ -5,18 +5,18 @@
 }
 .tabUl li {
   display: inline-block;
-  padding: 5px 15px;
+  padding: 5px 10px 5px 15px;
   background-color: #eee;
-  cursor: pointer;
-<<<<<<< HEAD
   color: #999;
+  border-radius: 3px 3px 0 0;
+  align-items: center;
+  cursor: default;
+}
+.tabUl li i {
+  margin-left: 8px;
+  cursor: pointer;
 }
 .tabUl li.active {
   background: #fff;
   color: #333;
-=======
-}
-.tabUl li.active {
-  background: #fff;
->>>>>>> 950478c000702456d417136c05d980f349396f18
 }
