--- a/src/components/TabPage/index.less
+++ b/src/components/TabPage/index.less
@@ -4,11 +4,16 @@
   list-style: none;
   li{
     display: inline-block;
-    padding: 5px 15px;
+    padding: 5px 10px 5px 15px;
     background-color: #eee;
-    cursor: pointer;
-<<<<<<< HEAD
     color: #999;
+    border-radius: 3px 3px 0 0;
+    align-items: center;
+    cursor: default;
+    i{
+      margin-left: 8px;
+      cursor: pointer;
+    }
     &.active{
       background: #fff;
       color: #333
@@ -16,10 +21,3 @@
   }
 }
 
-=======
-    &.active{
-      background: #fff;
-    }
-  }
-}
->>>>>>> 950478c000702456d417136c05d980f349396f18
